--- a/style.css
+++ b/style.css
@@ -15,9 +15,16 @@ body {
   overflow-x: hidden;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .main-container {
   width: 100%;
-  height: 100vh;
+  height: max-content;
+  padding: 15rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -156,4 +163,51 @@ body {
 
 .mb-3 {
   margin-bottom: 3rem;
+}
+
+/* CARRDs */
+
+.cards {
+  width: 100vw;
+  height: max-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+.card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.card img {
+  width: 17rem;
+}
+
+.cards:last-child img {
+  width: 12rem;
+}
+
+.cards:last-child h2 {
+  font-size: 1.5rem;
+}
+
+.cards:last-child p {
+  font-size: 0.9rem;
+}
+
+.card h2 {
+  color: var(--color-primary);
+  font-family: "Poppins", sans-serif;
+  font-weight: 900;
+  font-size: 2rem;
+}
+
+.card p {
+  color: black;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.2rem;
 }
