--- a/style.css
+++ b/style.css
@@ -23,9 +23,10 @@ body {
 
 main {
   width: 100vw;
-  height: 100vh;
+  height: 50vh;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 0 20rem;
 }
 
@@ -36,7 +37,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .main-heading {
@@ -59,11 +60,12 @@ main {
 
 .main-container p {
   font-family: "Poppins", sans-serif;
-  text-align: center;
+  /* text-align: center; */
+  margin-bottom: 3rem;
 }
 
 .hero-image {
-  height: 40rem;
+  height: 28rem;
   align-self: flex-end;
 }
 
